[build-system]
requires = ["setuptools>=61.0","wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "neuroinflammation-biomarkers-depression"
version = "1.0.0"
description = "Neuroinflammation biomarkers in depression: Harvard Dataverse 2020-2024. DOI: 10.7910/DVN/QBQXKL"
readme = "README.md"
license = {text = "CC0-1.0"}
authors = [{name = "Juan Moises de la Serna", email = "juanmoises.delaserna@gmail.com"}]
keywords = ["neuroinflammation","depression","IL-6","CRP","TNF-alpha","biomarkers","mental-health"]
requires-python = ">=3.7"
dependencies = ["pandas>=1.3.0","requests>=2.25.0","numpy>=1.20.0"]

[project.urls]
Homepage = "https://github.com/juanmoisesd/neuroinflammation-biomarkers-depression-2020-2024"
"Dataset DOI" = "https://doi.org/10.7910/DVN/QBQXKL"
